# Push2Control

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cpp  resources.qrc
Base/: Base.cpp  Base.h  CMakeLists.txt  ControllerDeviceEvents-v2.h  ControllerDeviceEvents.h  DeviceDescriptionLoader.cpp  DeviceDescriptionLoader.h  Instruments.cpp  Instruments.h  KitInstrument.cpp  KitInstrument.h  KitTrack.cpp  KitTrack.h  MelodicInstrument.cpp  MelodicInstrument.h  MelodyTrack.cpp  MelodyTrack.h  MidiCCAccumulator.h  MidiCCAccumulator.tcc  MidiDumper.h  MidiInMsgHandler.cpp  MidiInMsgHandler.h  MidiOutMsgHandler.cpp  MidiOutMsgHandler.h  MidiRouter.h  MusicDevice.cpp  MusicDevice.h  MusicDeviceDescription.h  MusicDeviceFactory.cpp  MusicDeviceFactory.h  MusicDeviceHolder.cpp  MusicDeviceHolder.h  MusicDeviceId.h  MusicScale.h  MusicScale.tcc  NoteMapper.cpp  NoteMapper.h  NoteMapperSettings.h  ParameterId.h  ParameterMapper.cpp  (+11 more)
Base/Documentation/Brainstorming/: ConfigObjects_v1.puml  ConfigObjects_v2.puml
Base/Instruments/: CMakeLists.txt  Instruments.cpp  Instruments.h  InstrumentsFactory.cpp  InstrumentsFactory.h  KitInstrument.cpp  KitInstrument.h  MelodicInstrument.cpp
Base/Mapping/: CMakeLists.txt  NoteMapperSettings.h
Base/MidiFriends/: CMakeLists.txt  MidiDumper.cpp  MidiDumper.h  MidiRouter.cpp
Base/MusicDevice/: CMakeLists.txt  ControllerDeviceEvents.h  ControllerDeviceEventsReflect.h  DeviceDescriptionLoader.cpp  DeviceDescriptionLoader.h  DoubleBufferedMessageDrain.h  Midi1OutputManager.cpp  Midi1OutputManager.h  MidiInMsgHandler.cpp  MidiInMsgHandler.h  MidiMessageIdsExtension.h  MidiOutMsgHandler.h  MusicDeviceFactory.cpp  MusicDeviceFactory.h  MusicDeviceHolder.h  MusicDeviceId.h  SoundPresets.h  UniqueCCMsgVector.h
Base/MusicDevice/MusicDeviceDescription/: CMakeLists.txt  ControllerSection.h  ControllerSectionMeta.h  MidiMessageIds.h  MusicDeviceDescription.cpp  MusicDeviceDescription.h
Base/MusicDeviceDescription/: CMakeLists.txt  ControllerSection.h  MidiMessageIds.h  SoundSection.h
Base/TempoAndTransport/: CMakeLists.txt  TapTempoHandler.h  TempoHandler.cpp  TempoHandler.h
Base/UnitTest/: CMakeLists.txt
Base/UnitTest/BaseRun/: CMakeLists.txt  main.cpp
FreeCADModel/Ableton+Push/: model.dae  push1.fcstd
FreeCADModel/Ableton+push+2/: model.dae
MidiConfigs/: custom_usbMidiName2device.json  usbMidiName2device.json
MidiConfigs/Devices/Ableton/: Push2Pads.json
MidiConfigs/Devices/Arturia/: Keystep32.json  Microbrute.json
MidiConfigs/Devices/Behringer/: ModelD.json
MidiConfigs/Devices/Elektron/: A4.json  Octatrack.json
MidiConfigs/Devices/Eventide/: Space.json
MidiConfigs/Devices/ExpressiveE/: ToucheSe.json
MidiConfigs/Devices/FredsLab/: Buzzzy.json
MidiConfigs/Devices/Korg/: VolcaKeys.json  VolcaKick.json
MidiConfigs/Devices/MAM/: MB33.json
MidiConfigs/Devices/Moog/: Minitaur.json
MidiConfigs/Devices/Novation/: LaunchControlXL.json
MidiConfigs/Devices/Roli/: SeaboardBlocks.json
MidiConfigs/Devices/SUONOBUONO/: nABC.json
Push2UI/: CMakeLists.txt  Push2Pads.cpp  Push2Pads.h
Push2UI/Push2DeviceSim/: Push2Device.h
Push2UI/Qt/: CMakeLists.txt  ControllerDeviceAndPresetSelection.cpp  ControllerDeviceAndPresetSelection.h  ControllerDeviceParameter.cpp  ControllerDeviceParameter.h  ControllerDeviceParameterCategoryModel.cpp  ControllerDeviceParameterCategoryModel.h  ControllerDeviceParameterModel.cpp  ControllerDeviceParameterModel.h  ControllerDeviceSelectionModel.cpp  ControllerDeviceSelectionModel.h  ControllerPresetSelectionModel.cpp  ControllerPresetSelectionModel.h  MappingCurveDrawing.cpp  MappingCurveDrawing.h  MappingCurveQt.cpp  MappingCurveQt.h  MidiChannelMappingBridge.cpp  MidiChannelMappingBridge.h  MidiDumperModel.cpp  MidiDumperModel.h  MidiOpenedInputPortsModel.cpp  MidiOpenedInputPortsModel.h  MidiOpenedOutputPortsModel.cpp  MidiOpenedOutputPortsModel.h  MusicScalesBaseNoteModel.cpp  MusicScalesBaseNoteModel.h  MusicScalesModel.cpp  MusicScalesModel.h  Push2DeviceOverlay.cpp  Push2DeviceOverlay.h  Push2DeviceQtAdapter.cpp  Push2DeviceQtAdapter.h  Push2PadsBridge.cpp  Push2PadsBridge.h  QmlSceneLoader.cpp  QmlSceneLoader.h  SettingsSaverBridge.cpp  SettingsSaverBridge.h  SoundDeviceAndVoiceSelection.cpp  (+23 more)
Push2UI/Qt/Bridges/: CMakeLists.txt  InstrumentsBridge.cpp  InstrumentsBridge.h  KitInstrumentBridge.cpp  KitInstrumentBridge.h  KitInstrumentsModel.cpp  KitInstrumentsModel.h  KitSoundBridge.h  KitSoundVoicesModel.cpp  KitSoundVoicesModel.h  KitSoundsModel.cpp  KitSoundsModel.h  MelodicInstrumentBridge.h  MelodicInstrumentVoicesModel.cpp  MelodicInstrumentVoicesModel.h  MelodicInstrumentsModel.cpp  MelodicInstrumentsModel.h
Push2UI/Qt/Bridges/TestApp/: BusinessLogic.h  CMakeLists.txt  CarsModel.cpp  CarsModel.h  ParameterModel.cpp  ParameterModel.h  TestApp.qml  main.cpp  resources.qrc
Push2UI/Qt/Documents/: PassEnumToQml.org
Resources/: resources.qrc
Resources/qmls/: ControllerDeviceParameterScene.qml  ControllerDeviceSelectionScene.qml  FilterCurve.qml  InstrumentSetupScene.qml  ListViewHelper.js  MidiPortMappingScene.qml  MidiRouteSpecializingScene.qml  PadScaleConfigurationScene.qml  SoundDeviceParameterScene.qml  SoundDeviceSelectionScene.qml  SoundPresetScene.qml  main.qml
Util/: 2DMatrixCheck.h  ArrayOfOptionals.h  CMakeLists.txt  DoubleBuffered.h  FileReader.cpp  FileReader.h  FixedSizeVector.h  HomeDir.cpp  HomeDir.h  KeyValueVector.h  Locked.h  Overload.h  Ringbuffer.hpp  Settings.h  ThreadedLoop.h  threadId.h
Util/Serialize/: CMakeLists.txt  JsonCast.h  JsonCast.inl  JsonCastNamespaceFix.h  StringCast.cpp  StringCast.h
Util/UnitTest/: CMakeLists.txt  UT_2DMatrixCheck.cpp  UT_FixedSizeVector.cpp  UT_JsonParseOptionals.cpp  UT_JsonParseVariants.cpp  UT_KeyValueVector.cpp  UT_Overload.cpp  UT_ReflectionWithNamespace.cpp  UT_Ringbuffer.cpp  UT_ThreadedLoop.cpp
qmls/: BpmAndTransportHandlingScene.qml  ControllerDeviceParameterScene.qml  MidiPortMappingScene.qml  ObjectCreator.js  PadScaleConfigurationScene.qml  SoundDeviceParameterScene.qml  main.qml
(+28 files in other folders)
